init - start getting rn working with new tamagui

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.7",
+    "@tamagui/babel-plugin": "*",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "tamagui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -23,5 +26,19 @@
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@tamagui/babel-plugin": "portal:/Users/n8/tamagui/packages/babel-plugin",
+    "@tamagui/core": "portal:/Users/n8/tamagui/packages/core",
+    "@tamagui/core-node": "portal:/Users/n8/tamagui/packages/core-node",
+    "@tamagui/esdx": "portal:/Users/n8/tamagui/packages/esdx",
+    "@tamagui/fake-react-native": "portal:/Users/n8/tamagui/packages/fake-react-native",
+    "@tamagui/feather-icons": "portal:/Users/n8/tamagui/packages/feather-icons",
+    "@tamagui/helpers": "portal:/Users/n8/tamagui/packages/helpers",
+    "tamagui-loader": "portal:/Users/n8/tamagui/packages/loader",
+    "@tamagui/next-plugin": "portal:/Users/n8/tamagui/packages/next-plugin",
+    "@tamagui/static": "portal:/Users/n8/tamagui/packages/static",
+    "tamagui": "portal:/Users/n8/tamagui/packages/tamagui",
+    "@tamagui/test": "portal:/Users/n8/tamagui/packages/test"
+  }
 }
