update to latest versions

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.yarn/cache
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+
 node_modules/
 .expo/
 dist/
