--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@tamagui/babel-plugin": "^1.0.0-alpha.21",
-    "@tamagui/colors": "^1.0.0-alpha.17",
+    "@tamagui/babel-plugin": "^1.0.0-alpha.27",
+    "@tamagui/colors": "^1.0.0-alpha.26",
     "@unimodules/core": "^7.2.0",
     "expo": "~43.0.3",
     "expo-status-bar": "~1.1.0",
@@ -19,10 +20,11 @@
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
     "react-native-web": "0.17.5",
-    "tamagui": "^1.0.0-alpha.21"
+    "tamagui": "^1.0.0-alpha.27"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@manypkg/cli": "^0.19.1",
     "@types/react": "~17.0.37",
     "@types/react-native": "~0.66.6",
     "typescript": "~4.5.2"
