--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tamagui/babel-plugin": "^1.0.0-alpha.34",
     "@tamagui/colors": "^1.0.0-alpha.32",
     "@unimodules/core": "^7.2.0",
-    "expo": "~43.0.3",
+    "expo": "^43.0.4",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
