--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@tamagui/babel-plugin": "^1.0.0-alpha.34",
-    "@tamagui/colors": "^1.0.0-alpha.32",
+    "@tamagui/babel-plugin": "^1.0.0-alpha.37",
+    "@tamagui/colors": "^1.0.0-alpha.37",
     "@unimodules/core": "^7.2.0",
     "expo": "^43.0.4",
     "expo-status-bar": "~1.1.0",
@@ -20,13 +20,17 @@
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
     "react-native-web": "0.17.5",
-    "tamagui": "^1.0.0-alpha.34"
+    "tamagui": "^1.0.0-alpha.37"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@expo/webpack-config": "^0.16.14",
     "@manypkg/cli": "^0.19.1",
     "@types/react": "~17.0.37",
     "@types/react-native": "~0.66.6",
+    "esbuild-loader": "^2.17.0",
+    "tamagui-loader": "^1.0.0-alpha.37",
+    "thread-loader": "^3.0.4",
     "typescript": "~4.5.2"
   },
   "private": true
