--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "strict": true,
     "target": "esnext",
     "lib": [
@@ -9,13 +10,10 @@
     "jsx": "react",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "typeRoots": [
-      "./ts-declarations",
-      "node_modules/@types"
-    ],
     "sourceMap": true,
     "declaration": true,
     "inlineSources": true,
+    "preserveSymlinks": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "strictFunctionTypes": true,
