--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "TAMAGUI_TARGET=native expo start",
     "upgrade:tamagui": "manypkg upgrade tamagui && manypkg upgrade @tamagui && manypkg upgrade tamagui-loader",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "TAMAGUI_TARGET=native expo start --ios",
+    "ios:clean": "yarn ios -c",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@tamagui/babel-plugin": "^1.0.0-alpha.50",
+    "@tamagui/babel-plugin": "^1.0.0-alpha.56",
     "@tamagui/colors": "^1.0.0-alpha.44",
     "@unimodules/core": "^7.2.0",
     "expo": "^43.0.4",
@@ -20,7 +21,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
     "react-native-web": "0.17.5",
-    "tamagui": "^1.0.0-alpha.50"
+    "tamagui": "^1.0.0-alpha.56"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -29,7 +30,7 @@
     "@types/react": "~17.0.37",
     "@types/react-native": "~0.66.6",
     "esbuild-loader": "^2.17.0",
-    "tamagui-loader": "^1.0.0-alpha.50",
+    "tamagui-loader": "^1.0.0-alpha.56",
     "thread-loader": "^3.0.4",
     "typescript": "~4.5.2"
   },
